--- a/projectLibrary/src/main/resources/application.yml
+++ b/projectLibrary/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
     port: 8083
     error.include-message: always
+springdoc:
+    swagger-ui:
+        path: /swagger-ui.html
 spring:
     jpa:
         properties.hibernate.dialect: org.hibernate.dialect.MySQL55Dialect
@@ -11,3 +14,7 @@ spring:
         url: jdbc:mysql://localhost:3306/llib
         username: root
         password: nastia0403
+
+
+    main:
+        allow-circular-references: true
